There was an issue with users reordering list while filtered. I removed the filter function for the array and gave the JavaScript property of a bool named visible, this bool will be used to say if it should be visible on the user's screen depending on the filters executed.

--- a/src/components/ToDoList.css
+++ b/src/components/ToDoList.css
@@ -141,3 +141,7 @@
   color: hsl(234, 11%, 52%);
   text-align: center;
 }
+
+.ToDoList .show-task {
+  display: none;
+}
